# 2dccf

./: .gitignore  .readthedocs.yaml  README.md  pyproject.toml
archive/browsing/: AtlasTransformBrowser.m  get_offset_map_backup.m
ccf2d/: __main__.py  io.py  main_init.py  main_view.py
docs/source/: conf.py  index.rst
docs/source/get_start/: data_structure.rst  gui.rst  index.rst  init.rst  installation.rst  roi.rst  view.rst
fiji/: 2.rescale.groovy
matlab/main_scripts/: initial_alignment.m  save_transfrom_mat.m  slice_postprocessing.m  slice_registration.m
matlab/utils/: save_transfrom_mat.m
res/allenccf/: Analyze_Clicked_Points.m  Analyze_ROIs_Update.m  Display_Probe_Track.m  Process_Histology.asv
src/: Analyze_ROIs.m  Analyze_ROIs_Update.m  Initiate_AllignTools.asv  Initiate_AllignTools.m  Navigate_Atlas_and_Register_Slices.m  Process_Histology.m  analysis_rois.m  save_transfrom_mat.m  slice_registration.m
src/browsing/: get_offset_map.m
src/py2dccf/: ref.py  roi_analyzer.py  util.py
src/util_allenccf/: get_offset_map_C.m  get_offset_map_S.m
